--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,26 @@
+<app-header />
+
 <main>
   <div id="dashboard">
     <app-dashboard-item
-      [image]="{ src: 'globe.png', alt: 'A globe' }"
-      title="Server status"
+      [image]="{ src: 'status.png', alt: 'A signal symbol' }"
+      title="Server Status"
     >
-      <app-server-status></app-server-status>
+      <app-server-status />
     </app-dashboard-item>
+
     <app-dashboard-item
       [image]="{ src: 'globe.png', alt: 'A globe' }"
-      title="App traffic"
+      title="Traffic"
     >
-      <app-traffic></app-traffic>
+      <app-traffic />
     </app-dashboard-item>
+
     <app-dashboard-item
-      [image]="{ src: 'globe.png', alt: 'A globe' }"
-      title="Tickets"
+      [image]="{ src: 'list.png', alt: 'A list of items' }"
+      title="Support Tickets"
     >
-      <app-tickets></app-tickets>
+      <app-tickets />
     </app-dashboard-item>
   </div>
 </main>
