--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,7 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <button>
-          <span> Logout </span>
-          <span class="icon"> → </span>
-        </button>
+        <button></button>
       </li>
     </ul>
   </nav>
