feat/add reusable button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <button></button>
+        <button appButton>Logout ⌲</button>
       </li>
     </ul>
   </nav>
