--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,2 +1,2 @@
-<span> <ng-content></ng-content> </span>
-<span class="icon"> <ng-content></ng-content> </span>
+<span> <ng-content /> </span>
+<ng-content select=".icon" />
