--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,12 +1,10 @@
 <form>
-  <p>
-    <label>Title</label>
-    <input name="title" id="title" />
-  </p>
-  <p>
-    <label>Request</label>
+  <app-control label="Title">
+    <input type="text" name="title" id="title" />
+  </app-control>
+  <app-control label="Request">
     <textarea name="request" id="request" rows="3"></textarea>
-  </p>
+  </app-control>
   <p>
     <button appButton>Submit <span class="icon">⌲</span></button>
   </p>
