--- a/src/app/dashboard/server-status/server-status.component.html
+++ b/src/app/dashboard/server-status/server-status.component.html
@@ -1,4 +1,11 @@
-<div>
+<div
+  [class]="{
+    status: true,
+    'status-online': currentStatus === 'online',
+    'status-offline': currentStatus === 'offline',
+    'status-unkwown': currentStatus !== 'online' && currentStatus !== 'offline'
+  }"
+>
   @if (currentStatus === 'online') {
   <p>Servers are online</p>
   <p>All systems are operational.</p>
